# test_task_cool

./: .gitignore  .pre-commit-config.yaml  ReadMe.md  config.py  db.py  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt
